--- a/projects/ngx-angular-query-builder/tsconfig.lib.json
+++ b/projects/ngx-angular-query-builder/tsconfig.lib.json
@@ -3,11 +3,18 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "../../out-tsc/lib",
+    "target": "es2015",
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
     "types": [],
-    "lib": ["dom", "ES2022"]
+    "lib": [
+      "dom",
+      "es2018"
+    ]
   },
-  "exclude": ["src/test.ts", "**/*.spec.ts"]
+  "exclude": [
+    "src/test.ts",
+    "**/*.spec.ts"
+  ]
 }
